# gochecks

./: README.md  go.mod  go.sum
cmd/loglint/: main.go
cmd/serrorslint/: main.go
logcheck/: BUILD.bazel  logcheck.go  logcheck_test.go
logcheck/testdata/src/fail/: fail.go
logcheck/testdata/src/named/: named.go
serrorscheck/: BUILD.bazel  serrorscheck.go  serrorscheck_test.go
serrorscheck/testdata/src/fail/: fail.go
serrorscheck/testdata/src/named/: fail.go
