load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_tool_library")

go_library(
    name = "go_default_library",
    srcs = ["logcheck.go"],
    importpath = "github.com/oncilla/gochecks/logcheck",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_tool_library"],
)

go_tool_library(
    name = "go_tool_library",
    srcs = ["logcheck.go"],
    importpath = "github.com/oncilla/gochecks/logcheck",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_tool_library"],
)
